--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "events": "^3.1.0",
     "prettier": "^2.0.5",
     "ts-node": "^8.9.1",
     "tslint": "^6.1.1",
