--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/khanamoto/programming-typescript-practice#readme",
   "devDependencies": {
     "@types/node": "^13.13.6",
+    "@types/react": "^16.9.35",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.8.0",
